scalalib/src/test/resource/acyclic/src/test/resources/fail/halfpackagecycle/c/C1.scala
package fail.halfpackagecycle.c

object C1
